Move library load.

--- a/Lab3/Lab_3_indeksowanie.ipynb
+++ b/Lab3/Lab_3_indeksowanie.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from elasticsearch import Elasticsearch\n",
     "import os \n",
     "import glob\n",
     "import regex\n",
@@ -45,6 +44,7 @@
     }
    ],
    "source": [
+    "from elasticsearch import Elasticsearch\n",
     "es = Elasticsearch('http://localhost:9200')\n",
     "es.info()"
    ]
@@ -5929,6 +5929,8 @@
     "    tmp = OrderedDict()\n",
     "    for word_s, count_s in full_count_sorted:\n",
     "        dist = Levenshtein.distance(word, word_s)\n",
+    "        # morf_result = morf.analyse(word)\n",
+    "        # if morf_result[0][2][2] != \"ign\":\n",
     "        tmp[word_s] = dist\n",
     "    levenstein_suggestions_for_missing_words_with_5.append(np.array(sorted(tmp.items(), key=lambda item: item[1]))[:10])"
    ]
@@ -6008,6 +6010,19 @@
     "            print(m[0]+\", \", end=\" \") # jesli chcemy wpisy z odległoscia to dać samo \"m\"\n",
     "    print()\n",
     "# levenstein_suggestions_for_missing_words_with_5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in levenstein_suggestions_for_missing_words_with_5:\n",
+    "    for word in i:\n",
+    "        morf_result = morf.analyse(word)\n",
+    "        if morf_result[0][2][2] == \"ign\":\n",
+    "            del levenstein_suggestions_for_missing_words_with_5[i][word]"
    ]
   },
   {
