--- a/Lab5/Lab_5_tagging.ipynb
+++ b/Lab5/Lab_5_tagging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "1179"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,31 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e2ea88f52c3f4718aed5f507ddb59798",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1179 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def krnnt2(text):\n",
     "    response = requests.post(\"http://localhost:9200\", data=text.encode(\"utf-8\"))\n",
     "    return response.content.decode(\"utf-8\")\n",
     "\n",
     "\n",
-    "files_content[\"tagged\"] = [krnnt2(text) for text in tqdm(files_content[\"text\"], total=1179)]\n"
+    "# files_content[\"tagged\"] = [krnnt2(text) for text in tqdm(files_content[\"text\"], total=1179)]\n"
    ]
   },
   {
@@ -108,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files_content.to_csv(\"files_tagged.csv\")"
+    "# files_content.to_csv(\"files_tagged.csv\")"
    ]
   },
   {
@@ -250,7 +235,171 @@
     }
    ],
    "source": [
-    "files_content"
+    "# files_content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>tagged</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1993_599</td>\n",
+       "      <td>\\n\\n\\n\\ndz.u. z 1993 r. nr 129, poz. 599 \\n   ...</td>\n",
+       "      <td>dz\\tnone\\n\\tdziennik\\tbrev:pun\\tdisamb\\n.\\tnon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1993_602</td>\n",
+       "      <td>\\n\\n\\n\\ndz.u. z 1993 r. nr 129, poz. 602 \\n   ...</td>\n",
+       "      <td>dz\\tnone\\n\\tdziennik\\tbrev:pun\\tdisamb\\n.\\tnon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1993_645</td>\n",
+       "      <td>\\n\\n\\n\\ndz.u. z 1993 r. nr 134, poz. 645\\n    ...</td>\n",
+       "      <td>dz\\tnone\\n\\tdziennik\\tbrev:pun\\tdisamb\\n.\\tnon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1993_646</td>\n",
+       "      <td>\\n\\n\\n\\ndz.u. z 1993 r. nr 134, poz. 646\\n    ...</td>\n",
+       "      <td>dz\\tnone\\n\\tdziennik\\tbrev:pun\\tdisamb\\n.\\tnon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1994_150</td>\n",
+       "      <td>\\n\\n\\n\\ndz.u. z 1994 r. nr 40, poz. 150\\n     ...</td>\n",
+       "      <td>dz\\tnone\\n\\tdziennik\\tbrev:pun\\tdisamb\\n.\\tnon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1174</th>\n",
+       "      <td>1174</td>\n",
+       "      <td>2004_96</td>\n",
+       "      <td>\\n\\n\\ntekst ustawy\\nprzyjęty przez senat bez p...</td>\n",
+       "      <td>tekst\\tnone\\n\\ttekst\\tsubst:sg:nom:m3\\tdisamb\\...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1175</th>\n",
+       "      <td>1175</td>\n",
+       "      <td>2004_962</td>\n",
+       "      <td>\\n\\n\\ntekst ustawy\\nprzyjęty przez senat bez p...</td>\n",
+       "      <td>tekst\\tnone\\n\\ttekst\\tsubst:sg:nom:m3\\tdisamb\\...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1176</th>\n",
+       "      <td>1176</td>\n",
+       "      <td>2004_963</td>\n",
+       "      <td>\\n\\n\\n\\ndz.u. z 2004 r. nr 97, poz. 963\\n     ...</td>\n",
+       "      <td>dz\\tnone\\n\\tdziennik\\tbrev:pun\\tdisamb\\n.\\tnon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1177</th>\n",
+       "      <td>1177</td>\n",
+       "      <td>2004_964</td>\n",
+       "      <td>\\n\\n\\ntekst ustawy przyjęty przez senat bez po...</td>\n",
+       "      <td>tekst\\tnone\\n\\ttekst\\tsubst:sg:nom:m3\\tdisamb\\...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1178</th>\n",
+       "      <td>1178</td>\n",
+       "      <td>2004_97</td>\n",
+       "      <td>\\n\\n\\n\\ndz.u. z 2004 r. nr 11, poz. 97\\n      ...</td>\n",
+       "      <td>dz\\tnone\\n\\tdziennik\\tbrev:pun\\tdisamb\\n.\\tnon...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1179 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0        id                                               text  \\\n",
+       "0              0  1993_599  \\n\\n\\n\\ndz.u. z 1993 r. nr 129, poz. 599 \\n   ...   \n",
+       "1              1  1993_602  \\n\\n\\n\\ndz.u. z 1993 r. nr 129, poz. 602 \\n   ...   \n",
+       "2              2  1993_645  \\n\\n\\n\\ndz.u. z 1993 r. nr 134, poz. 645\\n    ...   \n",
+       "3              3  1993_646  \\n\\n\\n\\ndz.u. z 1993 r. nr 134, poz. 646\\n    ...   \n",
+       "4              4  1994_150  \\n\\n\\n\\ndz.u. z 1994 r. nr 40, poz. 150\\n     ...   \n",
+       "...          ...       ...                                                ...   \n",
+       "1174        1174   2004_96  \\n\\n\\ntekst ustawy\\nprzyjęty przez senat bez p...   \n",
+       "1175        1175  2004_962  \\n\\n\\ntekst ustawy\\nprzyjęty przez senat bez p...   \n",
+       "1176        1176  2004_963  \\n\\n\\n\\ndz.u. z 2004 r. nr 97, poz. 963\\n     ...   \n",
+       "1177        1177  2004_964  \\n\\n\\ntekst ustawy przyjęty przez senat bez po...   \n",
+       "1178        1178   2004_97  \\n\\n\\n\\ndz.u. z 2004 r. nr 11, poz. 97\\n      ...   \n",
+       "\n",
+       "                                                 tagged  \n",
+       "0     dz\\tnone\\n\\tdziennik\\tbrev:pun\\tdisamb\\n.\\tnon...  \n",
+       "1     dz\\tnone\\n\\tdziennik\\tbrev:pun\\tdisamb\\n.\\tnon...  \n",
+       "2     dz\\tnone\\n\\tdziennik\\tbrev:pun\\tdisamb\\n.\\tnon...  \n",
+       "3     dz\\tnone\\n\\tdziennik\\tbrev:pun\\tdisamb\\n.\\tnon...  \n",
+       "4     dz\\tnone\\n\\tdziennik\\tbrev:pun\\tdisamb\\n.\\tnon...  \n",
+       "...                                                 ...  \n",
+       "1174  tekst\\tnone\\n\\ttekst\\tsubst:sg:nom:m3\\tdisamb\\...  \n",
+       "1175  tekst\\tnone\\n\\ttekst\\tsubst:sg:nom:m3\\tdisamb\\...  \n",
+       "1176  dz\\tnone\\n\\tdziennik\\tbrev:pun\\tdisamb\\n.\\tnon...  \n",
+       "1177  tekst\\tnone\\n\\ttekst\\tsubst:sg:nom:m3\\tdisamb\\...  \n",
+       "1178  dz\\tnone\\n\\tdziennik\\tbrev:pun\\tdisamb\\n.\\tnon...  \n",
+       "\n",
+       "[1179 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f_content = pd.read_csv(\"files_tagged.csv\")\n",
+    "f_content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files_content = f_content"
    ]
   },
   {
@@ -273,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +452,7 @@
        " 'Miła\\tnone\\n\\tmiła\\tsubst:sg:nom:f\\tdisamb\\nma\\tspace\\n\\tmieć\\tfin:sg:ter:imperf\\tdisamb\\n,\\tnone\\n\\t,\\tinterp\\tdisamb\\njak\\tspace\\n\\tjak\\tadv:pos\\tdisamb\\nżyć\\tspace\\n\\tżyć\\tinf:imperf\\tdisamb\\n?\\tnone\\n\\t?\\tinterp\\tdisamb\\n\\n')"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +522,7 @@
        "Counter({'ala:subst & mieć:fin': 1, 'mieć:fin & kot:subst': 1})"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +551,7 @@
        "False"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +692,7 @@
        " ('o:prep & który:adj', 28656)]"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +751,7 @@
        " ('-:interp', 61832)]"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +826,7 @@
        " ('ustawa:subst & z:prep', 8625)]"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +855,7 @@
        " ('się:qub', 45888)]"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +954,7 @@
        " ('droga:subst & rozporządzenie:subst', 0.018643621599944822)]"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,131 +978,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>bigram</th>\n",
-       "      <th>count</th>\n",
-       "      <th>llr</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>133</th>\n",
-       "      <td>który:adj &amp; mowa:subst</td>\n",
-       "      <td>28538</td>\n",
-       "      <td>8.936696e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>o:prep &amp; który:adj</td>\n",
-       "      <td>28656</td>\n",
-       "      <td>5.900772e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>134</th>\n",
-       "      <td>mowa:subst &amp; w:prep</td>\n",
-       "      <td>28473</td>\n",
-       "      <td>5.386029e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>otrzymywać:fin &amp; brzmienie:subst</td>\n",
-       "      <td>10535</td>\n",
-       "      <td>3.994394e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>w:prep &amp; artykuł:brev</td>\n",
-       "      <td>32037</td>\n",
-       "      <td>2.447546e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>194344</th>\n",
-       "      <td>artystyczny:adj &amp; otrzymywać:fin</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.504941e-15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>184212</th>\n",
-       "      <td>przedmiot:subst &amp; przekazywać:fin</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3.781697e-16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>346162</th>\n",
-       "      <td>z:prep &amp; urządzić:ger</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3.330669e-16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>141657</th>\n",
-       "      <td>uciążliwy:adj &amp; z:prep</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3.330669e-16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59196</th>\n",
-       "      <td>granica:subst &amp; on:ppron3</td>\n",
-       "      <td>19</td>\n",
-       "      <td>1.249001e-16</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>369956 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                   bigram  count           llr\n",
-       "133                który:adj & mowa:subst  28538  8.936696e-02\n",
-       "132                    o:prep & który:adj  28656  5.900772e-02\n",
-       "134                   mowa:subst & w:prep  28473  5.386029e-02\n",
-       "65       otrzymywać:fin & brzmienie:subst  10535  3.994394e-02\n",
-       "19                  w:prep & artykuł:brev  32037  2.447546e-02\n",
-       "...                                   ...    ...           ...\n",
-       "194344   artystyczny:adj & otrzymywać:fin      1  2.504941e-15\n",
-       "184212  przedmiot:subst & przekazywać:fin      1  3.781697e-16\n",
-       "346162              z:prep & urządzić:ger      2  3.330669e-16\n",
-       "141657             uciążliwy:adj & z:prep      2  3.330669e-16\n",
-       "59196           granica:subst & on:ppron3     19  1.249001e-16\n",
-       "\n",
-       "[369956 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 235,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'bigrams_results' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_18424/2919994666.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbigrams_results\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'llr'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mascending\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'bigrams_results' is not defined"
+     ]
     }
    ],
    "source": [
-    "bigrams_results.sort_values('llr', ascending=False)"
+    "bigrams_stats_clean.sort_values('llr', ascending=False)"
    ]
   },
   {
